# api/go/grpc/service.pb.validate.go
@@ -11,7 +11,6 @@ import (
 	"net/mail"
 	"net/url"
 	"regexp"
-	"sort"
 	"strings"
 	"time"
 	"unicode/utf8"
@@ -32,53 +31,19 @@ var (
 	_ = (*url.URL)(nil)
 	_ = (*mail.Address)(nil)
 	_ = anypb.Any{}
-	_ = sort.Sort
 )
 
 // Validate checks the field values on UploadRequest with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
+// the proto definition for this message. If any rules are violated, an error
+// is returned.
 func (m *UploadRequest) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on UploadRequest with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in UploadRequestMultiError, or
-// nil if none found.
-func (m *UploadRequest) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *UploadRequest) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
 
-	var errors []error
-
 	// no validation rules for Type
 
-	if all {
-		switch v := interface{}(m.GetValidation()).(type) {
-		case interface{ ValidateAll() error }:
-			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, UploadRequestValidationError{
-					field:  "Validation",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		case interface{ Validate() error }:
-			if err := v.Validate(); err != nil {
-				errors = append(errors, UploadRequestValidationError{
-					field:  "Validation",
-					reason: "embedded message failed validation",
-					cause:  err,
-				})
-			}
-		}
-	} else if v, ok := interface{}(m.GetValidation()).(interface{ Validate() error }); ok {
+	if v, ok := interface{}(m.GetValidation()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
 			return UploadRequestValidationError{
 				field:  "Validation",
@@ -90,39 +55,13 @@ func (m *UploadRequest) validate(all bool) error {
 
 	// no validation rules for Filename
 
-	switch v := m.Detail.(type) {
-	case *UploadRequest_File:
-		if v == nil {
-			err := UploadRequestValidationError{
-				field:  "Detail",
-				reason: "oneof value cannot be a typed-nil",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		}
+	// no validation rules for Bucket
 
-		if all {
-			switch v := interface{}(m.GetFile()).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, UploadRequestValidationError{
-						field:  "File",
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, UploadRequestValidationError{
-						field:  "File",
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(m.GetFile()).(interface{ Validate() error }); ok {
+	switch m.Detail.(type) {
+
+	case *UploadRequest_File:
+
+		if v, ok := interface{}(m.GetFile()).(interface{ Validate() error }); ok {
 			if err := v.Validate(); err != nil {
 				return UploadRequestValidationError{
 					field:  "File",
@@ -133,44 +72,12 @@ func (m *UploadRequest) validate(all bool) error {
 		}
 
 	case *UploadRequest_Url:
-		if v == nil {
-			err := UploadRequestValidationError{
-				field:  "Detail",
-				reason: "oneof value cannot be a typed-nil",
-			}
-			if !all {
-				return err
-			}
-			errors = append(errors, err)
-		}
 		// no validation rules for Url
-	default:
-		_ = v // ensures v is used
-	}
 
-	if len(errors) > 0 {
-		return UploadRequestMultiError(errors)
 	}
 
 	return nil
 }
-
-// UploadRequestMultiError is an error wrapping multiple validation errors
-// returned by UploadRequest.ValidateAll() if the designated constraints
-// aren't met.
-type UploadRequestMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UploadRequestMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UploadRequestMultiError) AllErrors() []error { return m }
 
 // UploadRequestValidationError is the validation error returned by
 // UploadRequest.Validate if the designated constraints aren't met.
@@ -227,53 +134,18 @@ var _ interface {
 } = UploadRequestValidationError{}
 
 // Validate checks the field values on FileUpload with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
+// proto definition for this message. If any rules are violated, an error is returned.
 func (m *FileUpload) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on FileUpload with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in FileUploadMultiError, or
-// nil if none found.
-func (m *FileUpload) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *FileUpload) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
-
-	var errors []error
 
 	// no validation rules for Data
 
 	// no validation rules for Offset
 
-	if len(errors) > 0 {
-		return FileUploadMultiError(errors)
-	}
-
 	return nil
 }
-
-// FileUploadMultiError is an error wrapping multiple validation errors
-// returned by FileUpload.ValidateAll() if the designated constraints aren't met.
-type FileUploadMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m FileUploadMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m FileUploadMultiError) AllErrors() []error { return m }
 
 // FileUploadValidationError is the validation error returned by
 // FileUpload.Validate if the designated constraints aren't met.
@@ -330,51 +202,16 @@ var _ interface {
 } = FileUploadValidationError{}
 
 // Validate checks the field values on Validation with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
+// proto definition for this message. If any rules are violated, an error is returned.
 func (m *Validation) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on Validation with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in ValidationMultiError, or
-// nil if none found.
-func (m *Validation) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *Validation) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
 
-	var errors []error
-
 	// no validation rules for MaxSize
-
-	if len(errors) > 0 {
-		return ValidationMultiError(errors)
-	}
 
 	return nil
 }
-
-// ValidationMultiError is an error wrapping multiple validation errors
-// returned by Validation.ValidateAll() if the designated constraints aren't met.
-type ValidationMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m ValidationMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m ValidationMultiError) AllErrors() []error { return m }
 
 // ValidationValidationError is the validation error returned by
 // Validation.Validate if the designated constraints aren't met.
@@ -431,60 +268,27 @@ var _ interface {
 } = ValidationValidationError{}
 
 // Validate checks the field values on UploadResponse with the rules defined in
-// the proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
+// the proto definition for this message. If any rules are violated, an error
+// is returned.
 func (m *UploadResponse) Validate() error {
-	return m.validate(false)
-}
-
-// ValidateAll checks the field values on UploadResponse with the rules defined
-// in the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in UploadResponseMultiError,
-// or nil if none found.
-func (m *UploadResponse) ValidateAll() error {
-	return m.validate(true)
-}
-
-func (m *UploadResponse) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
 
-	var errors []error
-
 	// no validation rules for Id
 
-	// no validation rules for Url
+	// no validation rules for ObjectName
+
+	// no validation rules for StorageLocation
 
 	// no validation rules for Offset
 
 	// no validation rules for Size
 
-	// no validation rules for MimeType
-
-	if len(errors) > 0 {
-		return UploadResponseMultiError(errors)
-	}
+	// no validation rules for ContentType
 
 	return nil
 }
-
-// UploadResponseMultiError is an error wrapping multiple validation errors
-// returned by UploadResponse.ValidateAll() if the designated constraints
-// aren't met.
-type UploadResponseMultiError []error
-
-// Error returns a concatenation of all the error messages it wraps.
-func (m UploadResponseMultiError) Error() string {
-	var msgs []string
-	for _, err := range m {
-		msgs = append(msgs, err.Error())
-	}
-	return strings.Join(msgs, "; ")
-}
-
-// AllErrors returns a list of validation violation errors.
-func (m UploadResponseMultiError) AllErrors() []error { return m }
 
 // UploadResponseValidationError is the validation error returned by
 // UploadResponse.Validate if the designated constraints aren't met.
